# PLP-Guerras_Civis

./: .gitignore  CHANGELOG.md  ChatFunctions.hs  GameFunctions.hs  LICENSE  LoginFunctions.hs  Main.hs  PLP-Guerras-Civis.cabal  PLP-Guerras-Civis.cabal.esse  README.md  RoomFunctions.hs  db-structure.txt  init.sh  kasco.txt  project-infra.txt
app/: Main.hs
cabal/: .gitignore  PLP-Guerras-Civis.cabal  README.md  init.sh  requests.txt  test-functions.txt
cabal/database/: docker-compose.yml  init.sql
cabal/database/data/postgres/base/1/: 1259  2619  2619_vm  2696  2840  2841  pg_internal.init
cabal/database/data/postgres/base/16384/: 1247  1249  1259  16388  16390  16393  2579  2606  2608  2610  2620  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  2701  2702  2703  2704  3455  pg_internal.init
cabal/database/data/postgres/base/5/: pg_internal.init
cabal/database/data/postgres/global/: 1260  1262  2671  pg_control  pg_internal.init
cabal/database/data/postgres/pg_stat/: pgstat.stat
cabal/src/: BackendServer.hs  BotLogic.hs  DbFunctions.hs  GameChatFunctions.hs  GameController.hs  GameFunctions.hs  GameFunctionsInit.hs  GameRoleFunctions.hs  GameRoundController.hs  GameRoundFunctions.hs  LoginPlayerFunctions.hs  LoginRoomFunctions.hs  RoomFunctions.hs  main.hs
cabal/src/Controllers/: ApiController.hs  GameController.hs  GameRoundController.hs  RoundController.hs
cabal/src/Core/: BackendServer.hs  DbFunctions.hs
cabal/src/Game/: BotLogic.hs  ChatFunctions.hs  GameFunctions.hs  Interface.hs  RoleFunctions.hs  RoundFunctions.hs  StartFunctions.hs  StopFunctions.hs  playerInterface.hs
cabal/src/GameUtils/: BotLogic.hs  ChatFunctions.hs  GameChatFunctions.hs  GameFunctions.hs  GameFunctionsInit.hs  GameRoleFunctions.hs  GameRoundFunctions.hs  GameStartFunctions.hs  GameStopFunctions.hs  RoleFunctions.hs  RoundFunctions.hs  RoundUtils.hs
cabal/src/LoginUtils/: LoginPlayerFunctions.hs  LoginRoomFunctions.hs  PlayerFunctions.hs  RoomFunctions.hs
cabal/src/Utils/: Utils.hs
database/: db-structure.txt  docker-compose.yml  init.sql
prolog/: Main.pl  Session.vim  chat.txt  init.sh
prolog/Controllers/: GameController.hs  GameMenu.pl  Menu.pl  Session.vim  Utils.pl
prolog/Databases/: Chat.pl  PlayerKnowledge.pl  Players.pl  PlayersKnowledge.pl  Rooms.pl  UserGameData.pl
prolog/Game/: BotLogic.pl  ChatFunctions.hs  ChatWriter.pl  GameFunctions.pl  Players.pl  RoleFunctions.hs  RoleFunctions.pl  Rooms.pl  RoundFunctions.hs  Session.vim  StartFunctions.hs  text.txt
prolog/Interface/: EnviarMensagem.pl  ExecutarAcao.pl  Inicio.pl  ListarJogadoresVivos.pl
prolog/LoginUtils/: RoomFunctions.hs
prolog/Utils/: Utils.hs  Utils.pl
src/: CharacterFunctions.hs  ChatFunctions.hs  DbFunctions.hs  GameFunctions.hs  LoginFunctions.hs  RoomFunctions.hs  main.hs
web-app/: .gitignore  init.sh  package-lock.json  package.json
web-app/src/: MainPage.js  RegistPage.js  index.js
(+22 files in other folders)
