cabal-version:      3.4
name:               PLP-Guerras-Civis

-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             mttgermano
maintainer:         mttgermano@proton.me
category:           Game
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable PLP-Guerras-Civis
    main-is:            main.hs
    hs-source-dirs:     src 
    other-modules:
        Core.DbFunctions,
        Core.BackendServer,
        Controllers.ApiController,
        Controllers.GameController,
        Controllers.RoundController,
        Game.GameFunctions,
        Game.StartFunctions,
        Game.StopFunctions,
        Game.RoleFunctions,
        Game.ChatFunctions,
        Game.RoundFunctions,
        Game.BotLogic,
        LoginUtils.PlayerFunctions,
        LoginUtils.RoomFunctions,
        Utils.Utils

    -- Other library packages from which modules are imported.
    build-depends:
        base ^>=4.19.1.0,
        network,
        postgresql-simple,
        async,
        uuid,
        bytestring,
        aeson,
        scotty,
        text,
        random,
        wai-extra,
        http-types,
        wai-cors

    -- Base language which the package is written in.
    default-language: GHC2021
